# hlsBugExample

./: mapreduce.cabal
src/: Main.hs
