cabal-version:      2.4
name:               sovioths
version:            0.1.0.0
author:             soulomoon
maintainer:         fwy996602672@gmail.com

extra-source-files: CHANGELOG.md

common deps
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options: -Wall
  build-depends:
      base            >=4.12  
    , text
    , mtl
    , containers
    , hashable
    , directory
    , bytestring
    , binary

executable Main
  import: deps
  main-is: Main.hs

library lib
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options: -Wall
  build-depends:
      base            >=4.12  && <5


